[package]
name = "atomic-css-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-css-parser = { path = "../atomic-css-parser/" }
atomic-css-organism = { path = "../atomic-css-organism/" }
derive_more = "0.99.17"
